<resources>
    <string name="app_name">RJC Management</string>
    <string name="customer_login_description">Customer Login</string>
    <string name="employee_login_description">Employee Login</string>
    <string name="click_here_to_sign_up">Click here to sign up</string>
    <string name="login_screen_header">RJC Management</string>
    <string name="main_logo_content_description">Main Logo</string>
    <string name="sign_up_headline">Please sign up for access</string>
    <string name="sign_up_hint_first_name">First Name</string>
    <string name="sign_up_hint_company_name">Company Name</string>
    <string name="sign_up_hint_project_name">Project Name</string>
    <string name="sign_up_hint_last_name">Last Name</string>
    <string name="sign_up_hint_email">Email</string>
</resources>