<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivMain"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/main_logo_content_description"
        android:foregroundGravity="center"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/bSignUP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMain"
        app:srcCompat="@drawable/ic_employees" />

    <Button
        android:id="@+id/bSignUP"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:text="@string/click_here_to_sign_up"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@color/mid"
        android:overScrollMode="never"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvEmployees"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/mid"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:contentPadding="8dp">

            <ImageButton
                android:id="@+id/ibEmployees"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dark"
                android:contentDescription="@string/employee_login_description"
                android:elevation="2dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_employees" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvCustomers"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/mid"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp"
            app:contentPadding="8dp">

            <ImageButton
                android:id="@+id/ibCustomers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dark"
                android:contentDescription="@string/customer_login_description"
                android:elevation="2dp"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_customers" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:id="@+id/tvMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_screen_header"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>